--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "minimatch":           "3.0.x",
     "shelljs":             "0.3.x",
     "strip-json-comments": "1.0.x",
-    "lodash":              "3.6.x",
+    "lodash":              "^4.17.5",
     "underscore":          "1.6.x"
   },
 
